@@ -23,6 +23,7 @@
 	- add new fully recursive macro.c
 
 2.5.4 -> 2.5.5:
+	- permit rpm to be built in a sub-directory (--srcdir=DIR).
 	- return CPIO_BAD_HEADER instead of exiting. (Scott M. Stone)
 	- untranslate "(none)" for auto relocating script wrappers.
 	- non-linux arch/os identification (Eugene Kanter).
